@@ -1,3 +1,13 @@
+2021-08-08  Yusuke Suzuki  <ysuzuki@apple.com>
+
+        [JSC] Clean up test262 expectations
+        https://bugs.webkit.org/show_bug.cgi?id=228903
+
+        Reviewed by Ross Kirsling.
+
+        * test262/config.yaml:
+        * test262/expectations.yaml:
+
 2021-08-07  Keith Miller  <keith_miller@apple.com>
 
         for-in should only emit one loop in bytecode
